# gltest

./: Cargo.toml  out.txt
src/: bidir.rs  gstrender.rs  main.rs  main_orig.rs  texture.rs
src/rendergl/: bindings.rs  glrenderer.rs  mod.rs  vertex.rs  view_state.rs
src/rendergl/shaders/: glfrag.glsl
