[package]
name = "gltest"
version = "0.1.0"
authors = ["eseaflower <eseaflower@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.16"
gstreamer-gl = {version = "0.16" }
gstreamer-video = "0.16"
gstreamer-app = "0.16"
anyhow = "1.0"
derive_more = "0.99.5"
glutin = "0.26"
glib = "0.10"
spin_sleep = "1.0"

[build-dependencies]
gl_generator = { version = "0.14" }

